# ckanext-datagovau

./: .gitignore  Makefile  README.rst  dev-requirements.txt  gulpfile.js  package-lock.json  package.json  pip-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  spatialingest.sh  test.ini
admin/: dga-spatialingestor.py  licenses.json
admin/config/cron/: crontab  crontab_prodbatch
admin/config/httpd/: apache.wsgi  ckan.conf  ckan_prodbatch.conf  datapusher_prodbatch.conf
admin/config/nginx/: ckan_prodbatch.conf
admin/config/supervisor/: celery-supervisor_prod.conf  celery-supervisor_prodbatch.conf  harvester-supervisor_prodbatch.conf
admin/config/tomcat/: context_prodbatch.xml  tomcat_prodbatch.conf
admin/metadata/: licenses.json
admin/scripts/: ckan-weekly-maintenance.sh  geoserver-health-check_prodbatch  geoserver-health-check_uat
admin/scripts/archive/: dga-spatialingestor.py
ckanext/datagovau/: authenticator.py  celery_import.py  cli.py  commands.py  controller.py  dataset.yaml  gdal_retile.py  geoserver_utils.py  helpers.py  lib.py  model.py  ogr2ogr.py  organization.yaml  plugin.py  profiles.py  spatialingestor.py  tasks.py  types.py  utils.py  validators.py
ckanext/datagovau/assets/: datagovau.css  datagovau.js  dga-jurisdiction-autofill.js  dga.css  webassets.yml
ckanext/datagovau/cli/: __init__.py  _bioregional.py  _energy_rating.py  _spatialingestor.py  _zip_extract.py  geoserveringestor.py  googleanalytics.py  maintain.py  spatialingestor.py
config/: licenses.json  project.ini  who.ini
(+89 files in other folders)
