[metadata]
name = ckanext-datagovau
version = 1.0.0a2
description = Extension for customising CKAN for data.gov.au
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Greg von Nessi
author_email = greg.vonnessi@linkdigital.com.au

[options]
python_requires = >= 3.7
install_requires =
		 typing_extensions
packages = find:
namespace_packages = ckanext
include_package_data = True
zip_safe = False

[options.entry_points]
ckan.plugins =
	     datagovau = ckanext.datagovau.plugin:DataGovAuPlugin

ckan.rdf.profiles =
		  dga_schemaorg = ckanext.datagovau.profiles:DgaSchemaOrgProfile

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/datagovau/i18n/ckanext-datagovau.pot
width = 80

[init_catalog]
domain = ckanext-datagovau
input_file = ckanext/datagovau/i18n/ckanext-datagovau.pot
output_dir = ckanext/datagovau/i18n

[update_catalog]
domain = ckanext-datagovau
input_file = ckanext/datagovau/i18n/ckanext-datagovau.pot
output_dir = ckanext/datagovau/i18n
previous = true

[compile_catalog]
domain = ckanext-datagovau
directory = ckanext/datagovau/i18n
statistics = true

[tool:pytest]
filterwarnings =
    ignore::sqlalchemy.exc.SADeprecationWarning
    ignore::sqlalchemy.exc.SAWarning
    ignore::DeprecationWarning

addopts = --ckan-ini test.ini
testpaths = ckanext/datagovau/tests
